feat: create general attendance
