# app/src/main/java/com/rizalanggoro/presensigo/core/di/ViewModelModule.kt
@@ -7,11 +7,11 @@ import com.rizalanggoro.presensigo.presentation.classroom.ClassroomViewModel
 import com.rizalanggoro.presensigo.presentation.lateness.detail.DetailLatenessViewModel
 import com.rizalanggoro.presensigo.presentation.lateness.detail.create.CreateDetailLatenessViewModel
 import com.rizalanggoro.presensigo.presentation.pages.auth.AuthViewModel
-import com.rizalanggoro.presensigo.presentation.pages.home.HomeViewModel
-import com.rizalanggoro.presensigo.presentation.pages.home.attendance.HomeAttendanceViewModel
-import com.rizalanggoro.presensigo.presentation.pages.home.lateness.HomeLatenessViewModel
-import com.rizalanggoro.presensigo.presentation.pages.home.setting.HomeSettingViewModel
 import com.rizalanggoro.presensigo.presentation.pages.home.student.StudentHomeViewModel
+import com.rizalanggoro.presensigo.presentation.pages.home.teacher.HomeViewModel
+import com.rizalanggoro.presensigo.presentation.pages.home.teacher.attendance.HomeAttendanceViewModel
+import com.rizalanggoro.presensigo.presentation.pages.home.teacher.lateness.HomeLatenessViewModel
+import com.rizalanggoro.presensigo.presentation.pages.home.teacher.setting.HomeSettingViewModel
 import com.rizalanggoro.presensigo.presentation.student.StudentViewModel
 import org.koin.core.module.dsl.viewModelOf
 import org.koin.dsl.module
