# app/src/main/java/com/rizalanggoro/presensigo/presentation/pages/auth/AuthViewModel.kt
@@ -6,6 +6,7 @@ import android.provider.Settings
 import androidx.lifecycle.ViewModel
 import androidx.lifecycle.viewModelScope
 import com.rizalanggoro.presensigo.core.constants.StateStatus
+import com.rizalanggoro.presensigo.core.failure.toFailure
 import com.rizalanggoro.presensigo.data.managers.TokenManager
 import com.rizalanggoro.presensigo.domain.Token
 import com.rizalanggoro.presensigo.domain.TokenType
@@ -13,13 +14,16 @@ import com.rizalanggoro.presensigo.openapi.apis.AuthApi
 import com.rizalanggoro.presensigo.openapi.apis.StudentApi
 import com.rizalanggoro.presensigo.openapi.models.LoginReq
 import com.rizalanggoro.presensigo.openapi.models.LoginStudentReq
+import io.ktor.client.plugins.ResponseException
+import io.ktor.client.statement.bodyAsText
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.asStateFlow
 import kotlinx.coroutines.flow.update
 import kotlinx.coroutines.launch
 
 data class State(
-    val status: StateStatus = StateStatus.Initial
+    val status: StateStatus = StateStatus.Initial,
+    val message: String = ""
 )
 
 class AuthViewModel(
@@ -37,32 +41,38 @@ class AuthViewModel(
 
     @SuppressLint("HardwareIds")
     fun loginStudent(nis: String, schoolCode: String) = viewModelScope.launch {
-        _state.update { it.copy(status = StateStatus.Loading) }
-        val androidId = Settings.Secure.getString(
-            application.contentResolver,
-            Settings.Secure.ANDROID_ID
-        )
-        val response = studentApi.loginStudent(
-            LoginStudentReq(
-                deviceId = androidId,
-                nis = nis,
-                schoolCode = schoolCode
+        try {
+            _state.update { it.copy(status = StateStatus.Loading) }
+            val androidId = Settings.Secure.getString(
+                application.contentResolver,
+                Settings.Secure.ANDROID_ID
             )
-        )
-        when (response.success) {
-            true -> {
-                val body = response.body()
-                tokenManager.set(
-                    Token(
-                        tokenType = TokenType.Student,
-                        accessToken = body.accessToken,
-                        refreshToken = body.refreshToken
-                    )
+            val response = studentApi.loginStudent(
+                LoginStudentReq(
+                    deviceId = androidId,
+                    nis = nis,
+                    schoolCode = schoolCode
                 )
-                _state.update { it.copy(status = StateStatus.Success) }
-            }
+            )
 
-            else -> _state.update { it.copy(status = StateStatus.Failure) }
+            val body = response.body()
+            tokenManager.set(
+                Token(
+                    tokenType = TokenType.Student,
+                    accessToken = body.accessToken,
+                    refreshToken = body.refreshToken
+                )
+            )
+            _state.update { it.copy(status = StateStatus.Success) }
+        } catch (e: ResponseException) {
+            e.printStackTrace()
+
+            _state.update {
+                it.copy(
+                    status = StateStatus.Failure,
+                    message = e.response.bodyAsText().toFailure().message
+                )
+            }
         }
     }
 
