# swagger.json
@@ -133,6 +133,30 @@
                 }
             }
         },
+        "/api/v1/auth/students/accounts/{student_token_id}/eject": {
+            "post": {
+                "tags": [
+                    "student"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "student token id",
+                        "name": "student_token_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.EjectStudentToken"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/auth/students/login": {
             "post": {
                 "tags": [
@@ -469,6 +493,44 @@
                 }
             }
         },
+        "/api/v1/batches/{batch_id}/majors/{major_id}/classrooms/{classroom_id}/student-accounts": {
+            "get": {
+                "tags": [
+                    "student"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "batch id",
+                        "name": "batch_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "major id",
+                        "name": "major_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "classroom id",
+                        "name": "classroom_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.GetAllStudentAccountsByClassroomId"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/batches/{batch_id}/majors/{major_id}/classrooms/{classroom_id}/students": {
             "get": {
                 "tags": [
@@ -591,53 +653,6 @@
                 }
             }
         },
-        "/api/v1/batches/{batch_id}/majors/{major_id}/classrooms/{classroom_id}/subject-attendances/records/student": {
-            "post": {
-                "tags": [
-                    "attendance"
-                ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "batch id",
-                        "name": "batch_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "major id",
-                        "name": "major_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "classroom id",
-                        "name": "classroom_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requests.CreateSubjectAttendanceRecordStudent"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/responses.CreateSubjectAttendanceRecordStudent"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/batches/{batch_id}/majors/{major_id}/classrooms/{classroom_id}/subject-attendances/{subject_attendance_id}": {
             "get": {
                 "tags": [
@@ -729,6 +744,7 @@
                 "tags": [
                     "attendance"
                 ],
+                "operationId": "createGeneralAttendanceRecordStudent",
                 "parameters": [
                     {
                         "description": "body",
@@ -736,7 +752,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requests.CreateGeneralAttendanceRecordStudent"
+                            "$ref": "#/definitions/CreateGeneralAttendanceRecordStudentReq"
                         }
                     }
                 ],
@@ -1013,6 +1029,33 @@
                 }
             }
         },
+        "/api/v1/subject-attendances/records/student": {
+            "post": {
+                "tags": [
+                    "attendance"
+                ],
+                "operationId": "createSubjectAttendanceRecordStudent",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateSubjectAttendanceRecordStudentReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.CreateSubjectAttendanceRecordStudent"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/subjects": {
             "get": {
                 "tags": [
@@ -1137,6 +1180,28 @@
         }
     },
     "definitions": {
+        "CreateGeneralAttendanceRecordStudentReq": {
+            "type": "object",
+            "required": [
+                "code"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string"
+                }
+            }
+        },
+        "CreateSubjectAttendanceRecordStudentReq": {
+            "type": "object",
+            "required": [
+                "code"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string"
+                }
+            }
+        },
         "GetAllStudentsByClassroomIdRes": {
             "type": "object",
             "required": [
@@ -1470,6 +1535,33 @@
                 }
             }
         },
+        "domains.StudentToken": {
+            "type": "object",
+            "required": [
+                "device_id",
+                "id",
+                "refresh_token",
+                "student_id",
+                "ttl"
+            ],
+            "properties": {
+                "device_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "student_id": {
+                    "type": "integer"
+                },
+                "ttl": {
+                    "type": "string"
+                }
+            }
+        },
         "domains.Subject": {
             "type": "object",
             "required": [
@@ -1585,6 +1677,21 @@
                 }
             }
         },
+        "dto.StudentAccount": {
+            "type": "object",
+            "required": [
+                "student",
+                "student_token"
+            ],
+            "properties": {
+                "student": {
+                    "$ref": "#/definitions/domains.Student"
+                },
+                "student_token": {
+                    "$ref": "#/definitions/domains.StudentToken"
+                }
+            }
+        },
         "requests.CreateClassroom": {
             "type": "object",
             "required": [
@@ -1603,17 +1710,6 @@
                     "type": "string"
                 },
                 "note": {
-                    "type": "string"
-                }
-            }
-        },
-        "requests.CreateGeneralAttendanceRecordStudent": {
-            "type": "object",
-            "required": [
-                "code"
-            ],
-            "properties": {
-                "code": {
                     "type": "string"
                 }
             }
@@ -1645,17 +1741,6 @@
                 },
                 "subject_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "requests.CreateSubjectAttendanceRecordStudent": {
-            "type": "object",
-            "required": [
-                "code"
-            ],
-            "properties": {
-                "code": {
-                    "type": "string"
                 }
             }
         },
@@ -1792,6 +1877,17 @@
                 }
             }
         },
+        "responses.EjectStudentToken": {
+            "type": "object",
+            "required": [
+                "message"
+            ],
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "responses.GetAll": {
             "type": "object",
             "required": [
@@ -1872,6 +1968,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/domains.Major"
+                    }
+                }
+            }
+        },
+        "responses.GetAllStudentAccountsByClassroomId": {
+            "type": "object",
+            "required": [
+                "items"
+            ],
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.StudentAccount"
                     }
                 }
             }
